correction d'alignements dt footer et des titres dans le css

--- a/booki-starter-code-master/booki-starter-code-master/css/style.css
+++ b/booki-starter-code-master/booki-starter-code-master/css/style.css
@@ -42,6 +42,7 @@ body {
     padding: 2px;
     margin-top: 13px;
     margin-right: 5px;
+    color: rgb(169, 170, 169);
 }
 
 .icone-infobar i {
@@ -315,24 +316,44 @@ a:hover {
     border-top-right-radius: 20px;
 }
 
-.card-title {
+.card-activities .card-title {
     display: flex;
     padding-left: 19px;
     gap: 10px;
 }
 
-/* gérer espacement et aligner avec hébergements et activités*/
-.informations { 
-    display: flex;
+footer {
     background-color: #F2F2F2;
     width: 1340px;
     height: 163px;
 }
-
-ul {
-    list-style-type: none;
+.informations { 
+    display: flex;
+    padding: 2px;
     gap: 15px;
-    padding: 20px;
 }
 
+.informations .A-propos {
+    width: 447px;
+    height: 163px;
+}
 
+.informations .hebergements-info {
+    width: 447px;
+    height: 163px;
+}
+
+.informations .Assistance {
+    width: 447px;
+    height: 163px;
+}
+
+ul {
+    text-align: left;
+}
+
+ul li {
+    list-style-type: none;
+    gap: 15px;
+    padding: 5px;
+}
